--- a/Server/package.json
+++ b/Server/package.json
@@ -1,7 +1,17 @@
 {
+  "name": "tic-tac-toe-backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
-    "http": "^0.0.1-security",
-    "nodemon": "^3.0.2",
-    "socket.io": "^4.7.3"
+    "express": "^4.18.2",
+    "socket.io": "^4.7.3",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
