--- a/Server/package.json
+++ b/Server/package.json
@@ -7,9 +7,10 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.18.2",
-    "socket.io": "^4.7.3",
-    "cors": "^2.8.5"
+    "socket.io": "^4.7.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
